# hermes-university

./: .gitignore  .pii-banlist.example  ARCHITECTURE.md  CONTRIBUTING.md  GUIDE.md  LICENSE  PREREQUISITES.md  README.md  bootstrap.sh  config.env.example  install.sh  profile.example.yaml  pyproject.toml  setup.sh
briefing/: sources.yaml
crons/: crons.yaml
docs/: REDEPLOY-runbook.md  RFC-001-architecture.md  RFC-002-university-lifecycle.md  RFC-003-course-authoring.md  RFC-004-faculty-and-mastery.md  RFC-005-open-source-readiness.md  RFC-006-ivy-grade-syllabus.md  RFC-007-research-and-placement.md  RFC-008-obsidian-surfaces.md  RFC-009-management-ux-and-lifecycle.md  RFC-010-daily-briefing.md  RFC-011-portable-redeploy.md  RFC-012-integrations-registry.md  RFC-013-continuous-learner-model.md  hermes-agent-reference.md
engine/: __init__.py  authoring.py  board.py  cards.py  cli.py  course.py  docs.py  fsrs.py  gradebook.py  learner_model.py  profile.py  registrar.py  render.py  scaffold.py  srs.py  state.py
hermes_university_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: anki_review_pull.py  anki_sync.py  hermes_backup.sh  install_anki_sync.sh  install_backup.sh  install_crons.py  install_vault_sync.sh  render_skills.py  vault_sync.sh
skills/: briefer.template.md  examiner.template.md  professor.template.md  registrar.template.md
tests/: conftest.py  test_board.py  test_cards.py  test_course.py  test_docs.py  test_fsrs.py  test_gradebook.py  test_integrations.py  test_learner_model.py  test_lifecycle.py  test_observations.py  test_plan.py  test_profile.py  test_proofgate.py  test_render.py  (+4 more)
(+15 files in other folders)
