[project]
name = "hermes-university-engine"
version = "0.1.0"
description = "Deterministic Registrar engine for Hermes University (owns all numbers)."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "fsrs>=4.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
hu-engine = "engine.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
# line length is owned by `ruff format` (keeps code ≤100); E501 would only ever fire on
# unbreakable prose in docstrings/comments/URLs, so we don't double-enforce it.
ignore = ["E501"]

[tool.pyright]
include = ["engine"]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["engine", "engine.proofgate"]
